# websockets-pd

./: .gitignore  .gitmodules  CMakeLists.txt  PdWebsocketClient.cpp  PdWebsocketClient.h  PdWebsocketServer.cpp  PdWebsocketServer.h  README.md  wsclient.cmake  wsclient.cpp  wsclient.h  wsserver.cmake  wsserver.cpp  wsserver.h
package/help/pd/: wsclient-help.pd  wsserver-help.pd
